Aggiunto header (sezione top e bottom)

--- a/index.html
+++ b/index.html
@@ -1,19 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Template HTML CSS</title>
+        <title>htmlcss-struttura-discord</title>
 
         <!-- CSS -->
         <link rel="stylesheet" href="css/style.css">
     </head>
+
     <body>
         
         <!-- Inizio Header Principale -->
         <header>
-            <div class="container">
-                HEADER
+            <div class="container header">
+                <div class="container header-top">
+                    <section class="header section-top">
+                        <div class="top logo">Logo</div>
+                        <div class="top link">Link Link Link Link Link</div>
+                        <div class="top login">Login</div>
+                    </section>
+                </div>
+
+                <div class="container header-bottom">
+                    <section class="header section-bottom">
+                        HEADER BOTTOM
+                    </section>
+                </div>
             </div>
         </header>
         <!-- Fine Header Principale -->
@@ -22,6 +36,10 @@
         <main>
             <div class="container">
                 MAIN
+                <section></section>
+                <section></section>
+                <section></section>
+                <section></section>
             </div>
         </main>
         <!-- Fine Main -->
