Aggiunto Main e rispettive box (blue-pink-big)

--- a/index.html
+++ b/index.html
@@ -35,12 +35,38 @@
         <!-- Inizio Main -->
         <main>
             <div class="container">
-                MAIN
-                <section></section>
-                <section></section>
-                <section></section>
-                <section></section>
+                <section class="modulo pari">
+                    <div class="box blue">
+                        BLUE BOX
+                    </div>
+                    <div class="box pink">
+                        PINK BOX
+                    </div>
+                </section>
+
+                <section class="modulo dispari">
+                    <div class="box blue">
+                        BLUE BOX
+                    </div>
+                    <div class="box pink">
+                        PINK BOX
+                    </div>
+                </section>
+
+                <section class="modulo pari">
+                    <div class="box blue">
+                        BLUE BOX
+                    </div>
+                    <div class="box pink">
+                        PINK BOX
+                    </div>
+                </section>
+
+                <section class="modulo">
+                    <div class="box green">BIG BOX</div>
+                </section>
             </div>
+
         </main>
         <!-- Fine Main -->
         
