Aggiustata classe pari/dispari in chiari/scuri

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <!-- Inizio Main -->
         <main>
             <div class="container">
-                <section class="modulo pari">
+                <section class="modulo scuro">
                     <div class="box blue">
                         BLUE BOX
                     </div>
@@ -44,7 +44,7 @@
                     </div>
                 </section>
 
-                <section class="modulo dispari">
+                <section class="modulo chiaro">
                     <div class="box blue">
                         BLUE BOX
                     </div>
@@ -53,7 +53,7 @@
                     </div>
                 </section>
 
-                <section class="modulo pari">
+                <section class="modulo chiaro">
                     <div class="box blue">
                         BLUE BOX
                     </div>
@@ -62,7 +62,7 @@
                     </div>
                 </section>
 
-                <section class="modulo">
+                <section class="modulo scuro">
                     <div class="box green">BIG BOX</div>
                 </section>
             </div>
