--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     </div>
                 </section>
 
-                <section class="modulo chiaro">
+                <section class="modulo scuro">
                     <div class="box blue">
                         BLUE BOX
                     </div>
@@ -62,7 +62,7 @@
                     </div>
                 </section>
 
-                <section class="modulo scuro">
+                <section class="modulo chiaro">
                     <div class="box green">BIG BOX</div>
                 </section>
             </div>
@@ -72,8 +72,23 @@
         
         <!-- Inizio Footer Principale -->
         <footer>
-            <div class="container">
-                FOOTER
+            <div class="container-album">
+                <section class="album">
+                    <div class="left-side">LEFT SIDE</div>
+                    <div class="right-side">RIGHT SIDE</div>
+                    <div class="right-side">RIGHT SIDE</div>
+                    <div class="right-side">RIGHT SIDE</div>
+                    <div class="right-side">RIGHT SIDE</div>
+                    <div class="right-side">RIGHT SIDE</div>
+                    <div class="right-side">RIGHT SIDE</div>
+                </section>
+            </div>
+
+            <div class="container-fondo-pagina">
+                <section class="fondo-pagina">
+                    <div class="logo-end">LOGO</div>
+                    <div class="button-end">BUTTON</div>
+                </section>
             </div>
         </footer>
         <!-- Fine Footer Principale -->
